force-app/main/default/objects/Event_Session__c/fields/Custom_Event__c.field-meta.xml
<CustomField>
    <fullName>Custom_Event__c</fullName>
    <description>This is a relationship between father and child</description>
    <label>Custom Event</label>
    <referenceTo>Custom_Event__c</referenceTo>
    <relationshipLabel>Event Sessions</relationshipLabel>
    <relationshipName>Event_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>