force-app/main/default/objects/Event_Session__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End_Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>