force-app/main/default/objects/Event_Session__c/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <formula>IF( AND( NOT( ISBLANK( End_Date__c ) ) ,NOT( ISBLANK(  Start_Date__c  ))) ,
  End_Date__c- Start_Date__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>