force-app/main/default/objects/Event_Session__c/validationRules/Datas_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>Datas_Control</fullName>
    <active>true</active>
    <description>Controls the validation of data</description>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End date must be grater than Start date</errorMessage>
</ValidationRule>