force-app/main/default/objects/Event_Session__c/validationRules/IsOneFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>IsOneFilled</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  NOT(  ISBLANK(End_Date__c)),    ISBLANK( Start_Date__c)  ,  NOT( ISBLANK(  Start_Date__c ) ) )</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>